Begin setting up Home page layout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,18 +5,17 @@
   <meta lang='en-us' charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css" type="text/css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{styleSheet}}" type="text/css" />
-
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 </head>
 
 <body>
-  
+
   {{{body}}}
-  
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
