--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
       <a class="navbar-brand">News Snatch</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a>Saved Articles</a></li>
+      <li><a href="/article/saved">Saved Articles</a></li>
     </ul>
   </div>
 </nav>
@@ -13,6 +13,6 @@
   <div class="panel-body">
   <h3 class="text-center">Click Snatch! to grab the latest articles from Charlotte Observer</h3>
   <br><br>
-  <button class="btn btn-default btn-lg">Snatch!</button>
+  <button id="scrapeButton" class="btn btn-default btn-lg">Snatch!</button>
   </div>
 </div>
