--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,17 @@
 
 <body>
 
+  <nav class="navbar navbar-inverse">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand">News Snatch</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/article/saved">Saved Articles</a></li>
+      </ul>
+    </div>
+  </nav>
+  
   {{{body}}}
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
