Server render the data-saved attribute on each save button and test to see if article has already been saved or not.  If it has, update button text.

--- a/views/allArticles.handlebars
+++ b/views/allArticles.handlebars
@@ -8,7 +8,7 @@
       <div class="media-body">
         <h4 class="media-heading"><a href="{{articleURL}}">{{title}}</a></h4>
         {{summary}}
-        <button class="saveButton btn btn-default btn-sm" data-id="{{_id}}">Save</button>
+        <button class="btn btn-default btn-sm" data-id="{{_id}}" data-saved="{{saved}}">Save</button>
       </div>
     </div>
     {{/each}}
