--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand">News Snatch</a>
+        <a href="/" class="navbar-brand">News Snatch</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/article/saved">Saved Articles</a></li>
