db operation to remove stranded comments.  Minor adjustments to savedArticles view and script.

--- a/views/savedArticles.handlebars
+++ b/views/savedArticles.handlebars
@@ -7,7 +7,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="{{articleURL}}">{{title}}</a></h4>
-        {{summary}}
+        <p>{{summary}}</p>
         <button class="saveButton btn btn-default btn-sm" data-id="{{_id}}" data-saved="{{saved}}">Save</button>
         <button class="notesButton btn btn-default btn-sm" data-id="{{_id}}">Notes</button>
       </div>
